add: web batch download
